generated/RDDLParser.ts
// Generated from ./RDDLParser.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { RDDLParserListener } from "./RDDLParserListener.js";
import { RDDLParserVisitor } from "./RDDLParserVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class RDDLParser extends antlr.Parser {
    public static readonly ALPHA = 1;
    public static readonly DIGIT = 2;
    public static readonly INTEGER = 3;
    public static readonly DOUBLE = 4;
    public static readonly ID = 5;
    public static readonly VARIABLE = 6;
    public static readonly ENUM_VALUE = 7;
    public static readonly DOMAIN = 8;
    public static readonly REQUIREMENTS = 9;
    public static readonly TYPES = 10;
    public static readonly PVARIABLES = 11;
    public static readonly CPFS = 12;
    public static readonly REWARD = 13;
    public static readonly STATE_INVARIANTS = 14;
    public static readonly ACTION_PRECONDITIONS = 15;
    public static readonly TERMINATION = 16;
    public static readonly INSTANCE = 17;
    public static readonly NON_FLUENTS = 18;
    public static readonly OBJECTS = 19;
    public static readonly INIT_STATE = 20;
    public static readonly MAX_NONDEF_ACTIONS = 21;
    public static readonly HORIZON = 22;
    public static readonly DISCOUNT = 23;
    public static readonly STATE_ACTION_CONSTRAINTS = 24;
    public static readonly CONCURRENT = 25;
    public static readonly CONSTRAINED_STATE = 26;
    public static readonly CONTINUOUS = 27;
    public static readonly CPF_DETERMINISTIC = 28;
    public static readonly INTEGER_VALUED = 29;
    public static readonly INTERMEDIATE_NODES = 30;
    public static readonly MULTIVALUED = 31;
    public static readonly PARTIALLY_OBSERVED = 32;
    public static readonly REWARD_DETERMINISTIC = 33;
    public static readonly NON_FLUENT = 34;
    public static readonly STATE_FLUENT = 35;
    public static readonly INTERMEDIATE_FLUENT = 36;
    public static readonly DERIVED_FLUENT = 37;
    public static readonly OBSERVATION_FLUENT = 38;
    public static readonly ACTION_FLUENT = 39;
    public static readonly BOOL = 40;
    public static readonly INT = 41;
    public static readonly REAL = 42;
    public static readonly OBJECT = 43;
    public static readonly DIV = 44;
    public static readonly MOD = 45;
    public static readonly FMOD = 46;
    public static readonly MIN = 47;
    public static readonly MAX = 48;
    public static readonly ABS = 49;
    public static readonly SGN = 50;
    public static readonly ROUND = 51;
    public static readonly FLOOR = 52;
    public static readonly CEIL = 53;
    public static readonly LOG = 54;
    public static readonly LN = 55;
    public static readonly EXP = 56;
    public static readonly POW = 57;
    public static readonly SQRT = 58;
    public static readonly HYPOT = 59;
    public static readonly GAMMA = 60;
    public static readonly LNGAMMA = 61;
    public static readonly COS = 62;
    public static readonly SIN = 63;
    public static readonly TAN = 64;
    public static readonly ACOS = 65;
    public static readonly ASIN = 66;
    public static readonly ATAN = 67;
    public static readonly COSH = 68;
    public static readonly SINH = 69;
    public static readonly TANH = 70;
    public static readonly IF = 71;
    public static readonly THEN = 72;
    public static readonly ELSE = 73;
    public static readonly SWITCH = 74;
    public static readonly CASE = 75;
    public static readonly DEFAULT = 76;
    public static readonly FORALL = 77;
    public static readonly EXISTS = 78;
    public static readonly SUM = 79;
    public static readonly PROD = 80;
    public static readonly AVG = 81;
    public static readonly MINIMUM = 82;
    public static readonly MAXIMUM = 83;
    public static readonly ARGMAX = 84;
    public static readonly ARGMIN = 85;
    public static readonly KRON_DELTA = 86;
    public static readonly BERNOULLI = 87;
    public static readonly DISCRETE = 88;
    public static readonly UNNORMDISCRETE = 89;
    public static readonly POISSON = 90;
    public static readonly BINOMIAL = 91;
    public static readonly NEGATIVEBINOMIAL = 92;
    public static readonly GEOMETRIC = 93;
    public static readonly DIRAC_DELTA = 94;
    public static readonly NORMAL = 95;
    public static readonly UNIFORM = 96;
    public static readonly EXPONENTIAL = 97;
    public static readonly WEIBULL = 98;
    public static readonly GAMMA_DIST = 99;
    public static readonly BETA = 100;
    public static readonly PARETO = 101;
    public static readonly STUDENT = 102;
    public static readonly GUMBEL = 103;
    public static readonly LAPLACE = 104;
    public static readonly CAUCHY = 105;
    public static readonly GOMPERTZ = 106;
    public static readonly CHISQUARE = 107;
    public static readonly KUMARASWAMY = 108;
    public static readonly DIRICHLET = 109;
    public static readonly MULTINOMIAL = 110;
    public static readonly MULTIVARIATENORMAL = 111;
    public static readonly MULTIVARIATESTUDENT = 112;
    public static readonly ROW = 113;
    public static readonly COLUMN = 114;
    public static readonly DET = 115;
    public static readonly INVERSE = 116;
    public static readonly PSEUDOINVERSE = 117;
    public static readonly CHOLESKY = 118;
    public static readonly AND = 119;
    public static readonly OR = 120;
    public static readonly NOT = 121;
    public static readonly PLUS = 122;
    public static readonly TIMES = 123;
    public static readonly LPAREN = 124;
    public static readonly RPAREN = 125;
    public static readonly LCURLY = 126;
    public static readonly RCURLY = 127;
    public static readonly DOT = 128;
    public static readonly COMMA = 129;
    public static readonly UNDERSCORE = 130;
    public static readonly LBRACK = 131;
    public static readonly RBRACK = 132;
    public static readonly IMPLY = 133;
    public static readonly EQUIV = 134;
    public static readonly NEQ = 135;
    public static readonly LESSEQ = 136;
    public static readonly LESS = 137;
    public static readonly GREATEREQ = 138;
    public static readonly GREATER = 139;
    public static readonly ASSIGN_EQUAL = 140;
    public static readonly COMP_EQUAL = 141;
    public static readonly DIV_OP = 142;
    public static readonly MINUS = 143;
    public static readonly COLON = 144;
    public static readonly SEMI = 145;
    public static readonly DOLLAR_SIGN = 146;
    public static readonly QUESTION = 147;
    public static readonly AMPERSAND = 148;
    public static readonly NEG_INF = 149;
    public static readonly POS_INF = 150;
    public static readonly LEVEL = 151;
    public static readonly TRUE = 152;
    public static readonly FALSE = 153;
    public static readonly OTHERWISE = 154;
    public static readonly TERMINATE_WHEN = 155;
    public static readonly TERMINAL = 156;
    public static readonly CDFS = 157;
    public static readonly WS = 158;
    public static readonly RULE_domainBlock = 0;
    public static readonly RULE_requirementsBlock = 1;
    public static readonly RULE_requirementList = 2;
    public static readonly RULE_typesBlock = 3;
    public static readonly RULE_typeList = 4;
    public static readonly RULE_pvariablesBlock = 5;
    public static readonly RULE_pvariable = 6;
    public static readonly RULE_params = 7;
    public static readonly RULE_typefluentList = 8;
    public static readonly RULE_defaultFluent = 9;
    public static readonly RULE_levelFluent = 10;
    public static readonly RULE_shortFluent = 11;
    public static readonly RULE_typeValue = 12;
    public static readonly RULE_value = 13;
    public static readonly RULE_cpfs = 14;
    public static readonly RULE_cpfContent = 15;
    public static readonly RULE_pvarExpr = 16;
    public static readonly RULE_termList = 17;
    public static readonly RULE_term = 18;
    public static readonly RULE_expr = 19;
    public static readonly RULE_atom = 20;
    public static readonly RULE_exprList = 21;

    public static readonly literalNames = [
        null, null, null, null, null, null, null, null, "'domain'", "'requirements'", 
        "'types'", "'pvariables'", "'cpfs'", "'reward'", "'state-invariants'", 
        "'action-preconditions'", "'termination'", "'instance'", "'non-fluents'", 
        "'objects'", "'init-state'", "'max-nondef-actions'", "'horizon'", 
        "'discount'", "'state-action-constraints'", "'concurrent'", "'constrained-state'", 
        "'continuous'", "'cpf-deterministic'", "'integer-valued'", "'intermediate-nodes'", 
        "'multivalued'", "'partially-observed'", "'reward-deterministic'", 
        "'non-fluent'", "'state-fluent'", "'interm-fluent'", "'derived-fluent'", 
        "'observ-fluent'", "'action-fluent'", "'bool'", "'int'", "'real'", 
        "'object'", "'div'", "'mod'", "'fmod'", "'min'", "'max'", "'abs'", 
        "'sgn'", "'round'", "'floor'", "'ceil'", "'log'", "'ln'", "'exp'", 
        "'pow'", "'sqrt'", "'hypot'", "'gamma'", "'lngamma'", "'cos'", "'sin'", 
        "'tan'", "'acos'", "'asin'", "'atan'", "'cosh'", "'sinh'", "'tanh'", 
        "'if'", "'then'", "'else'", "'switch'", "'case'", "'default'", "'forall_'", 
        "'exists_'", "'sum_'", "'prod_'", "'avg_'", "'minimum_'", "'maximum_'", 
        "'argmax_'", "'argmin_'", "'KronDelta'", "'Bernoulli'", "'Discrete'", 
        "'UnnormDiscrete'", "'Poisson'", "'Binomial'", "'NegativeBinomial'", 
        "'Geometric'", "'DiracDelta'", "'Normal'", "'Uniform'", "'Exponential'", 
        "'Weibull'", "'Gamma'", "'Beta'", "'Pareto'", "'Student'", "'Gumbel'", 
        "'Laplace'", "'Cauchy'", "'Gompertz'", "'ChiSquare'", "'Kumaraswamy'", 
        "'Dirichlet'", "'Multinomial'", "'MultivariateNormal'", "'MultivariateStudent'", 
        "'row'", "'col'", "'det'", "'inverse'", "'pinverse'", "'cholesky'", 
        "'^'", "'|'", "'~'", "'+'", "'*'", "'('", "')'", "'{'", "'}'", "'.'", 
        "','", "'_'", "'['", "']'", "'=>'", "'<=>'", "'~='", "'<='", "'<'", 
        "'>='", "'>'", "'='", "'=='", "'/'", "'-'", "':'", "';'", "'$'", 
        "'?'", "'&'", "'neg-inf'", "'pos-inf'", "'level'", "'true'", "'false'", 
        "'otherwise'", "'terminate-when'", "'terminal'", "'cdfs'"
    ];

    public static readonly symbolicNames = [
        null, "ALPHA", "DIGIT", "INTEGER", "DOUBLE", "ID", "VARIABLE", "ENUM_VALUE", 
        "DOMAIN", "REQUIREMENTS", "TYPES", "PVARIABLES", "CPFS", "REWARD", 
        "STATE_INVARIANTS", "ACTION_PRECONDITIONS", "TERMINATION", "INSTANCE", 
        "NON_FLUENTS", "OBJECTS", "INIT_STATE", "MAX_NONDEF_ACTIONS", "HORIZON", 
        "DISCOUNT", "STATE_ACTION_CONSTRAINTS", "CONCURRENT", "CONSTRAINED_STATE", 
        "CONTINUOUS", "CPF_DETERMINISTIC", "INTEGER_VALUED", "INTERMEDIATE_NODES", 
        "MULTIVALUED", "PARTIALLY_OBSERVED", "REWARD_DETERMINISTIC", "NON_FLUENT", 
        "STATE_FLUENT", "INTERMEDIATE_FLUENT", "DERIVED_FLUENT", "OBSERVATION_FLUENT", 
        "ACTION_FLUENT", "BOOL", "INT", "REAL", "OBJECT", "DIV", "MOD", 
        "FMOD", "MIN", "MAX", "ABS", "SGN", "ROUND", "FLOOR", "CEIL", "LOG", 
        "LN", "EXP", "POW", "SQRT", "HYPOT", "GAMMA", "LNGAMMA", "COS", 
        "SIN", "TAN", "ACOS", "ASIN", "ATAN", "COSH", "SINH", "TANH", "IF", 
        "THEN", "ELSE", "SWITCH", "CASE", "DEFAULT", "FORALL", "EXISTS", 
        "SUM", "PROD", "AVG", "MINIMUM", "MAXIMUM", "ARGMAX", "ARGMIN", 
        "KRON_DELTA", "BERNOULLI", "DISCRETE", "UNNORMDISCRETE", "POISSON", 
        "BINOMIAL", "NEGATIVEBINOMIAL", "GEOMETRIC", "DIRAC_DELTA", "NORMAL", 
        "UNIFORM", "EXPONENTIAL", "WEIBULL", "GAMMA_DIST", "BETA", "PARETO", 
        "STUDENT", "GUMBEL", "LAPLACE", "CAUCHY", "GOMPERTZ", "CHISQUARE", 
        "KUMARASWAMY", "DIRICHLET", "MULTINOMIAL", "MULTIVARIATENORMAL", 
        "MULTIVARIATESTUDENT", "ROW", "COLUMN", "DET", "INVERSE", "PSEUDOINVERSE", 
        "CHOLESKY", "AND", "OR", "NOT", "PLUS", "TIMES", "LPAREN", "RPAREN", 
        "LCURLY", "RCURLY", "DOT", "COMMA", "UNDERSCORE", "LBRACK", "RBRACK", 
        "IMPLY", "EQUIV", "NEQ", "LESSEQ", "LESS", "GREATEREQ", "GREATER", 
        "ASSIGN_EQUAL", "COMP_EQUAL", "DIV_OP", "MINUS", "COLON", "SEMI", 
        "DOLLAR_SIGN", "QUESTION", "AMPERSAND", "NEG_INF", "POS_INF", "LEVEL", 
        "TRUE", "FALSE", "OTHERWISE", "TERMINATE_WHEN", "TERMINAL", "CDFS", 
        "WS"
    ];
    public static readonly ruleNames = [
        "domainBlock", "requirementsBlock", "requirementList", "typesBlock", 
        "typeList", "pvariablesBlock", "pvariable", "params", "typefluentList", 
        "defaultFluent", "levelFluent", "shortFluent", "typeValue", "value", 
        "cpfs", "cpfContent", "pvarExpr", "termList", "term", "expr", "atom", 
        "exprList",
    ];

    public get grammarFileName(): string { return "RDDLParser.g4"; }
    public get literalNames(): (string | null)[] { return RDDLParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return RDDLParser.symbolicNames; }
    public get ruleNames(): string[] { return RDDLParser.ruleNames; }
    public get serializedATN(): number[] { return RDDLParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, RDDLParser._ATN, RDDLParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public domainBlock(): DomainBlockContext {
        let localContext = new DomainBlockContext(this.context, this.state);
        this.enterRule(localContext, 0, RDDLParser.RULE_domainBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 44;
            this.match(RDDLParser.DOMAIN);
            this.state = 45;
            this.match(RDDLParser.ID);
            this.state = 46;
            this.match(RDDLParser.LCURLY);
            this.state = 48;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 47;
                this.requirementsBlock();
                }
            }

            this.state = 50;
            this.typesBlock();
            this.state = 51;
            this.pvariablesBlock();
            this.state = 52;
            this.cpfs();
            this.state = 53;
            this.match(RDDLParser.REWARD);
            this.state = 55;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 14) {
                {
                this.state = 54;
                this.match(RDDLParser.STATE_INVARIANTS);
                }
            }

            this.state = 58;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 15) {
                {
                this.state = 57;
                this.match(RDDLParser.ACTION_PRECONDITIONS);
                }
            }

            this.state = 61;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 16) {
                {
                this.state = 60;
                this.match(RDDLParser.TERMINATION);
                }
            }

            this.state = 63;
            this.match(RDDLParser.RCURLY);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public requirementsBlock(): RequirementsBlockContext {
        let localContext = new RequirementsBlockContext(this.context, this.state);
        this.enterRule(localContext, 2, RDDLParser.RULE_requirementsBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 65;
            this.match(RDDLParser.REQUIREMENTS);
            this.state = 66;
            this.match(RDDLParser.LCURLY);
            this.state = 67;
            this.requirementList();
            this.state = 72;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 129) {
                {
                {
                this.state = 68;
                this.match(RDDLParser.COMMA);
                this.state = 69;
                this.requirementList();
                }
                }
                this.state = 74;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 75;
            this.match(RDDLParser.RCURLY);
            this.state = 76;
            this.match(RDDLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public requirementList(): RequirementListContext {
        let localContext = new RequirementListContext(this.context, this.state);
        this.enterRule(localContext, 4, RDDLParser.RULE_requirementList);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 78;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 25)) & ~0x1F) === 0 && ((1 << (_la - 25)) & 511) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typesBlock(): TypesBlockContext {
        let localContext = new TypesBlockContext(this.context, this.state);
        this.enterRule(localContext, 6, RDDLParser.RULE_typesBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 80;
            this.match(RDDLParser.TYPES);
            this.state = 81;
            this.match(RDDLParser.LCURLY);
            this.state = 83;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 82;
                this.typeList();
                }
                }
                this.state = 85;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 5);
            this.state = 87;
            this.match(RDDLParser.RCURLY);
            this.state = 88;
            this.match(RDDLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typeList(): TypeListContext {
        let localContext = new TypeListContext(this.context, this.state);
        this.enterRule(localContext, 8, RDDLParser.RULE_typeList);
        let _la: number;
        try {
            this.state = 107;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 7, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 90;
                this.match(RDDLParser.ID);
                this.state = 91;
                this.match(RDDLParser.COLON);
                this.state = 92;
                this.match(RDDLParser.OBJECT);
                this.state = 93;
                this.match(RDDLParser.SEMI);
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 94;
                this.match(RDDLParser.ID);
                this.state = 95;
                this.match(RDDLParser.COLON);
                this.state = 96;
                this.match(RDDLParser.LCURLY);
                this.state = 97;
                this.match(RDDLParser.ENUM_VALUE);
                this.state = 102;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 129) {
                    {
                    {
                    this.state = 98;
                    this.match(RDDLParser.COMMA);
                    this.state = 99;
                    this.match(RDDLParser.ENUM_VALUE);
                    }
                    }
                    this.state = 104;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 105;
                this.match(RDDLParser.RCURLY);
                this.state = 106;
                this.match(RDDLParser.SEMI);
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public pvariablesBlock(): PvariablesBlockContext {
        let localContext = new PvariablesBlockContext(this.context, this.state);
        this.enterRule(localContext, 10, RDDLParser.RULE_pvariablesBlock);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 109;
            this.match(RDDLParser.PVARIABLES);
            this.state = 110;
            this.match(RDDLParser.LCURLY);
            this.state = 114;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 5) {
                {
                {
                this.state = 111;
                this.pvariable();
                }
                }
                this.state = 116;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 117;
            this.match(RDDLParser.RCURLY);
            this.state = 118;
            this.match(RDDLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public pvariable(): PvariableContext {
        let localContext = new PvariableContext(this.context, this.state);
        this.enterRule(localContext, 12, RDDLParser.RULE_pvariable);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 120;
            this.match(RDDLParser.ID);
            this.state = 122;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 124) {
                {
                this.state = 121;
                this.params();
                }
            }

            this.state = 124;
            this.match(RDDLParser.COLON);
            this.state = 125;
            this.match(RDDLParser.LCURLY);
            this.state = 126;
            this.typefluentList();
            this.state = 127;
            this.match(RDDLParser.RCURLY);
            this.state = 128;
            this.match(RDDLParser.SEMI);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public params(): ParamsContext {
        let localContext = new ParamsContext(this.context, this.state);
        this.enterRule(localContext, 14, RDDLParser.RULE_params);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 130;
            this.match(RDDLParser.LPAREN);
            this.state = 131;
            this.match(RDDLParser.ID);
            this.state = 136;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 129) {
                {
                {
                this.state = 132;
                this.match(RDDLParser.COMMA);
                this.state = 133;
                this.match(RDDLParser.ID);
                }
                }
                this.state = 138;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 139;
            this.match(RDDLParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typefluentList(): TypefluentListContext {
        let localContext = new TypefluentListContext(this.context, this.state);
        this.enterRule(localContext, 16, RDDLParser.RULE_typefluentList);
        try {
            this.state = 161;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
            case 1:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 141;
                this.defaultFluent();
                this.state = 142;
                this.match(RDDLParser.COMMA);
                this.state = 143;
                this.typeValue();
                this.state = 144;
                this.match(RDDLParser.COMMA);
                this.state = 145;
                this.match(RDDLParser.DEFAULT);
                this.state = 146;
                this.match(RDDLParser.ASSIGN_EQUAL);
                this.state = 147;
                this.value();
                }
                break;
            case 2:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 149;
                this.levelFluent();
                this.state = 150;
                this.match(RDDLParser.COMMA);
                this.state = 151;
                this.typeValue();
                this.state = 152;
                this.match(RDDLParser.COMMA);
                this.state = 153;
                this.match(RDDLParser.LEVEL);
                this.state = 154;
                this.match(RDDLParser.ASSIGN_EQUAL);
                this.state = 155;
                this.value();
                }
                break;
            case 3:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 157;
                this.shortFluent();
                this.state = 158;
                this.match(RDDLParser.COMMA);
                this.state = 159;
                this.typeValue();
                }
                break;
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public defaultFluent(): DefaultFluentContext {
        let localContext = new DefaultFluentContext(this.context, this.state);
        this.enterRule(localContext, 18, RDDLParser.RULE_defaultFluent);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 163;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 34)) & ~0x1F) === 0 && ((1 << (_la - 34)) & 35) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public levelFluent(): LevelFluentContext {
        let localContext = new LevelFluentContext(this.context, this.state);
        this.enterRule(localContext, 20, RDDLParser.RULE_levelFluent);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 165;
            _la = this.tokenStream.LA(1);
            if(!(_la === 36 || _la === 37)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public shortFluent(): ShortFluentContext {
        let localContext = new ShortFluentContext(this.context, this.state);
        this.enterRule(localContext, 22, RDDLParser.RULE_shortFluent);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 167;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 36)) & ~0x1F) === 0 && ((1 << (_la - 36)) & 7) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public typeValue(): TypeValueContext {
        let localContext = new TypeValueContext(this.context, this.state);
        this.enterRule(localContext, 24, RDDLParser.RULE_typeValue);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 169;
            _la = this.tokenStream.LA(1);
            if(!(_la === 5 || ((((_la - 40)) & ~0x1F) === 0 && ((1 << (_la - 40)) & 7) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public value(): ValueContext {
        let localContext = new ValueContext(this.context, this.state);
        this.enterRule(localContext, 26, RDDLParser.RULE_value);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 171;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 184) !== 0) || _la === 152 || _la === 153)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public cpfs(): CpfsContext {
        let localContext = new CpfsContext(this.context, this.state);
        this.enterRule(localContext, 28, RDDLParser.RULE_cpfs);
        try {
            this.enterOuterAlt(localContext, 1);
